
* New features
  - Better cleanup of the $TMPDIR/par-$USER/temp-$$ directories
    that are typically used as caches in the "use PAR 'foo.par'" use case.

* Bug fixes, etc.
  - Very slightly more careful handling of PAR-specific environment
    variables.

[Changes for 0.986 - Feb 19, 2009]
  - Promote to stable release.

[Changes for 0.985_01 - Feb  2, 2009]
* New features
  - Support for the brand new static dependency resolution
    of PAR::Repository::Client 0.23.

* Bug fixes, etc.
  - Fix issue with running scripts from repositories:
    The INC hooks used to be set up too late for this to
    automatically pick up dependencies.

[Changes for 0.984 - Jan 25, 2009]
* New features
  - Implemented the auto-upgrading option for loading and installing
    from PAR::Repositories.

* Bug fixes, etc.
  - Fix issue with PAR::Repository::Client development versions.

[Changes for 0.983 - Sep 12, 2008]
* Dependencies
  - Require AutoLoader 5.67 which contains a PAR-related
    bug-fix.
  - Require PAR::Dist 0.32.

* Internal changes
  - The full extraction process _extract_inc
    (which is triggered when a non--clean pp packaged
    executable is run) can now be forced to do the
    extraction (instead of doing if !-d).
  - That same extraction routine now accepts Archive::Zip
    handles or file names.
  - When, during the full extraction, the extracted paths
    are to be added to @INC, we now make sure they're not
    in @INC yet.

[Changes for 0.982 - Aug 10, 2008]
* New features
  - Moved the routines that setup the PAR_TEMP environment variable
    to a separate module in the distribution so it's possible to
    use PAR::Repository::Client without loading all of PAR.
  - Same for the function that sets up PAR_PROGNAME.

* Bug fixes, etc.
  - Upgrade to Module::Install 0.77
  - Fix for running scripts from repositories.

[Changes for 0.980 - May 22, 2008]
* Bug fixes, etc.
  - The function PAR::get_filehandle() that was introduced in 0.979